seaqt/QtMultimedia/gen_qaudiooutputselectorcontrol.h

class QAudioOutputSelectorControl;
class QMetaObject;
typedef struct QAudioOutputSelectorControl QAudioOutputSelectorControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QAudioOutputSelectorControl_metaObject(const QAudioOutputSelectorControl* self);
void* QAudioOutputSelectorControl_metacast(QAudioOutputSelectorControl* self, const char* param1);
int QAudioOutputSelectorControl_metacall(QAudioOutputSelectorControl* self, int param1, int param2, void** param3);
struct miqt_string QAudioOutputSelectorControl_tr(const char* s);
struct miqt_string QAudioOutputSelectorControl_trUtf8(const char* s);
struct miqt_array /* of struct miqt_string */  QAudioOutputSelectorControl_availableOutputs(const QAudioOutputSelectorControl* self);
struct miqt_string QAudioOutputSelectorControl_outputDescription(const QAudioOutputSelectorControl* self, struct miqt_string name);
struct miqt_string QAudioOutputSelectorControl_defaultOutput(const QAudioOutputSelectorControl* self);
struct miqt_string QAudioOutputSelectorControl_activeOutput(const QAudioOutputSelectorControl* self);
void QAudioOutputSelectorControl_setActiveOutput(QAudioOutputSelectorControl* self, struct miqt_string name);
void QAudioOutputSelectorControl_activeOutputChanged(QAudioOutputSelectorControl* self, struct miqt_string name);
void QAudioOutputSelectorControl_connect_activeOutputChanged(QAudioOutputSelectorControl* self, intptr_t slot);
void QAudioOutputSelectorControl_availableOutputsChanged(QAudioOutputSelectorControl* self);
void QAudioOutputSelectorControl_connect_availableOutputsChanged(QAudioOutputSelectorControl* self, intptr_t slot);
struct miqt_string QAudioOutputSelectorControl_tr2(const char* s, const char* c);
struct miqt_string QAudioOutputSelectorControl_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioOutputSelectorControl_trUtf82(const char* s, const char* c);
struct miqt_string QAudioOutputSelectorControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QAudioOutputSelectorControl_staticMetaObject();
void QAudioOutputSelectorControl_delete(QAudioOutputSelectorControl* self);